.cicd/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
    stack: ballerina
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 443
      targetPort: https
    - name: runtime-https
      port: 9445
      targetPort: runtime-https
    - name: observability
      port: 9449
      targetPort: observability
  selector:
    app: ${APP_NAME}
