.cicd/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_NAME}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  tls:
    - hosts:
        - ${INGRESS_URL}
      secretName: tls-secret
  rules:
    - host: ${INGRESS_URL}
      http:
        paths:
          - path: /icp/heartbeat
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}
                port:
                  name: runtime-https
          - path: /icp/deltaHeartbeat
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}
                port:
                  name: runtime-https
          - path: /observability
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}
                port:
                  name: observability
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${APP_NAME}
                port:
                  name: https
